--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
-.App {
-  text-align: center;
+.app-container{
+    padding: 20px;
+    text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.grid-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fill , minmax(140px , 1fr));
+    gap:20px;
+    margin-top:20px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card{
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    padding:10px;
+    background-color: #fff;
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.flag-image{
+    width:100%;
+    height: auto;
+    border-radius: 6px;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.country-name{
+    font-weight: bold;
+    margin-top: 10px
 }
