--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@
     display: grid;
     grid-template-columns: repeat(auto-fill , minmax(140px , 1fr));
     gap:20px;
-    margin-top:20px;
+    margin:60px;
+
 }
 .card{
     border: 1px solid #ddd;
