--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,22 @@
 .app-container{
-    padding: 20px;
+    padding: 10px;
     text-align: center;
 }
-.grid-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fill , minmax(140px , 1fr));
-    gap:20px;
-    margin:60px;
-
+.grid-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  margin: 20px auto;
 }
-.card{
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    padding:10px;
-    background-color: #fff;
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
+
+.countryCard {
+    width: 140px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: #fff;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
 }
 .flag-image{
     width:100%;
@@ -24,4 +26,11 @@
 .country-name{
     font-weight: bold;
     margin-top: 10px
+}
+.search-input {
+    padding: 10px;
+  width: 450px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  margin-top: 5px;
 }
